@@ -174,27 +174,6 @@ class Validation extends Fallback
     }
 
     /**
-     * We check the dev handle for a-z and A-Z.
-     *
-     * @param string|int|bool|null $value
-     *   The value we want to evaluate
-     * @param string $name
-     *   The name of the value we are checking, needed for the feedback text.
-     *
-     * @return bool
-     *   Whether it does evaluate or not.
-     */
-    protected function evalDevHandle($value, string $name): bool
-    {
-        $result = preg_match('/[^a-zA-Z]/', $value) === 0;
-        if ($result === false) {
-            $this->pool->messages->addMessage(static::KEY_CONFIG_ERROR . ucfirst($name));
-        }
-
-        return $result;
-    }
-
-    /**
      * We check the configuration for this skin.
      *
      * @param string|int|bool|null $value
